// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordStrengthMeter snapshot > displays the label text 1`] = `
<div>
  <div
    class="MuiBox-root css-834c69"
  >
    <div
      class="MuiBox-root css-197znzp"
    >
      <div
        class="MuiBox-root css-ef7vky"
      />
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-vezm6z-MuiTypography-root"
    >
      Custom label text
    </p>
  </div>
</div>
`;

exports[`PasswordStrengthMeter snapshot > renders with score 0 (very weak) 1`] = `
<div>
  <div
    class="MuiBox-root css-834c69"
  >
    <div
      class="MuiBox-root css-197znzp"
    >
      <div
        class="MuiBox-root css-clgdaf"
      />
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-vezm6z-MuiTypography-root"
    >
      Very weak
    </p>
  </div>
</div>
`;

exports[`PasswordStrengthMeter snapshot > renders with score 1 (weak) 1`] = `
<div>
  <div
    class="MuiBox-root css-834c69"
  >
    <div
      class="MuiBox-root css-197znzp"
    >
      <div
        class="MuiBox-root css-qlgypi"
      />
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-vezm6z-MuiTypography-root"
    >
      Weak
    </p>
  </div>
</div>
`;

exports[`PasswordStrengthMeter snapshot > renders with score 2 (fair) 1`] = `
<div>
  <div
    class="MuiBox-root css-834c69"
  >
    <div
      class="MuiBox-root css-197znzp"
    >
      <div
        class="MuiBox-root css-ef7vky"
      />
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-vezm6z-MuiTypography-root"
    >
      Fair
    </p>
  </div>
</div>
`;

exports[`PasswordStrengthMeter snapshot > renders with score 3 (good) 1`] = `
<div>
  <div
    class="MuiBox-root css-834c69"
  >
    <div
      class="MuiBox-root css-197znzp"
    >
      <div
        class="MuiBox-root css-1owvnwr"
      />
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-vezm6z-MuiTypography-root"
    >
      Good
    </p>
  </div>
</div>
`;

exports[`PasswordStrengthMeter snapshot > renders with score 4 (strong) 1`] = `
<div>
  <div
    class="MuiBox-root css-834c69"
  >
    <div
      class="MuiBox-root css-197znzp"
    >
      <div
        class="MuiBox-root css-1astc41"
      />
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-vezm6z-MuiTypography-root"
    >
      Strong
    </p>
  </div>
</div>
`;
